--- a/B2_Bien_KieuDuLieu_ToanTu/BaiTap/BienKieuDuLieuToanTu/Bai1.html
+++ b/B2_Bien_KieuDuLieu_ToanTu/BaiTap/BienKieuDuLieuToanTu/Bai1.html
@@ -9,7 +9,8 @@
     let Vatli = (prompt('Nhap diem vat li'))*1;
     let Hoahoc = (prompt('Nhap diem hoa hoc'))*1;
     let Sinhhoc = (prompt('Nhap diem sinh hoc'))*1;
-    document.writeln('diem TB la:'+ ( Vatli + Hoahoc + Sinhhoc)/3);
+    document.write('diem TB la:'+ ( Vatli + Hoahoc + Sinhhoc)/3);
+    document.write('<br/>');
     document.writeln('Tong diem ca ba mon la: '+ (Vatli+Hoahoc+Sinhhoc));
 </script>
 </body>
