Bien_KieuDuLieu_ToanTu

--- a/B2_Bien_KieuDuLieu_ToanTu/BaiTap/BienKieuDuLieuToanTu/Bai1.html
+++ b/B2_Bien_KieuDuLieu_ToanTu/BaiTap/BienKieuDuLieuToanTu/Bai1.html
@@ -11,7 +11,7 @@
     let Sinhhoc = (prompt('Nhap diem sinh hoc'))*1;
     document.write('diem TB la:'+ ( Vatli + Hoahoc + Sinhhoc)/3);
     document.write('<br/>');
-    document.writeln('Tong diem ca ba mon la: '+ (Vatli+Hoahoc+Sinhhoc));
+    document.write('Tong diem ca ba mon la: '+ (Vatli+Hoahoc+Sinhhoc));
 </script>
 </body>
 </html>
