Bien_KieuDuLieu_ToanTu

--- a/B2_Bien_KieuDuLieu_ToanTu/BaiTap/UngDungMayTinh/UDMayTinh.html
+++ b/B2_Bien_KieuDuLieu_ToanTu/BaiTap/UngDungMayTinh/UDMayTinh.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1> CACULOR </h1>
+<h1> CACULTOR </h1>
 <from>
     <input type="number" id="number1" name="number1">
     <input type="number" id="number2" name="number2"> <br>
