--- a/Module1_UDQL_KhuNghiDuong/Task1/Task1.html
+++ b/Module1_UDQL_KhuNghiDuong/Task1/Task1.html
@@ -14,19 +14,19 @@
 <!--               </th>-->
 <!--               <th>-->
                    ID
-                   <input type="text" id="cmnd">
+                   <input type="text" id="id">
 <!--               </th>-->
 <!--               <th>-->
                    EMAIL
-                   <input type="text" id="email">
+                   <input type="email" id="email">
 <!--               </th>-->
 <!--               <th>-->
-                   ADDRES
-                   <input type="text" id="addres">
+                   ADDRESS
+                   <input type="text" id="address">
 <!--               </th>-->
 <!--               <th>-->
                    BIRTHDAY
-                   <input type="text" id="birthday">
+                   <input type="date" id="birthday">
 <!--               </th>-->
 <!--           </tr>-->
 <!--        <tr>-->
@@ -41,28 +41,28 @@
                 </select>
 <!--            </th>-->
 <!--            <th>-->
-                SAEL
+                SALE
                 <input type="text" id="sale">
 <!--            </th>-->
 <!--            <th>-->
-                QUALITY
-                <input type="text" id="quality">
+                QUANTITY
+                <input type="text" id="quantity">
 <!--            </th>-->
 <!--            <th>-->
                 RENTDAYS
-                <input type="text" id="rentday">
+                <input type="number" id="rentdays">
 <!--            </th>-->
 <!--            <th>-->
                 SERVICE
-                <select>
-                    <option> Villla</option>
-                    <option> House</option>
-                    <option>Room</option>
+                <select id="service">
+                    <option value="500"> Villla</option>
+                    <option value="300"> House</option>
+                    <option value="100">Room</option>
                 </select>
 <!--            </th>-->
 <!--            <th>-->
                 ROOM FOR RENT
-                <select>
+                <select id="roomforrent">
                     <option> Vip </option>
                     <option> Business</option>
                     <option> Normal </option>
@@ -70,7 +70,78 @@
 <!--            </th>-->
 <!--        </tr>-->
 <!--    </table>-->
+    <button type="button" onclick="gia()"> price </button>
+    <div id = "output" style="display: none">
+        <p>
+            NAME:
+        </p>
+        <p id = "namedisplay"></p>
+        <p>
+            ID:
+        </p>
+        <p id = "iddisplay"></p>
+        <p>
+            EMAIL:
+        </p>
+        <p id = "emaildisplay"></p>
+        <p>
+            ADDRESS:
+        </p>
+        <p id = "addressdisplay"></p>
+        <p>
+            BIRTHDAY:
+        </p>
+        <p id = "birthdaydisplay"></p>
+        <p>
+            CUSTOMER:
+        </p>
+        <p id = "customerdisplay"></p>
+        <p>
+            SALE
+        </p>
+        <p id = "saledisplay"></p>
+        <p>
+            QUANTITY:
+        </p>
+        <p id = "quantitydisplay"></p>
+        <p>
+            RENTDAYS:
+        </p>
+        <p id = "rentdaysdisplay" style="display: inline"></p>
+        <p>
+            SERVICE:
+        </p>
+        <p id = "servicedisplay"></p>
+        <p>
+            ROOM FOR RENT:
+        </p>
+        <p id = "roomforrentdisplay"></p>
+        <p id="gia"></p>
+    </div>
 
 </from>
+<script>
+    function gia() {
+        let dichvu = document.getElementById('service');
+        let songay = document.getElementById('rentdays');
+        let giamgia = document.getElementById('sale');
+        let gia = 0;
+        gia = (dichvu.value) * 1 * (songay.value) * 1 * (1 - (giamgia.value) * 1 / 100);
+        document.getElementById('output').style.display = 'inline';
+        document.getElementById("namedisplay").innerText = document.getElementById("name").value;
+        document.getElementById("iddisplay").innerText = document.getElementById("id").value;
+        console.log(document.getElementById("id").value);
+        document.getElementById("emaildisplay").innerText = document.getElementById("email").value;
+        document.getElementById("addressdisplay").innerText = document.getElementById("address").value;
+        document.getElementById("birthdaydisplay").innerText = document.getElementById("birthday").value;
+        document.getElementById("customerdisplay").innerText = document.getElementById("customer").value;
+        document.getElementById("saledisplay").innerText = document.getElementById("sale").value;
+        document.getElementById("quantitydisplay").innerText = document.getElementById("quantity").value;
+        document.getElementById("rentdaysdisplay").innerText = document.getElementById("rentdays").value;
+        document.getElementById("servicedisplay").innerText = document.getElementById("service").value;
+        document.getElementById("roomforrentdisplay").innerText = document.getElementById("roomforrent").value;
+        document.getElementById('gia').innerText = "gia: " + gia;
+    }
+</script>
 </body>
 </html>
