Cau Truc Dieu Kien

--- a/B3_CauTrucDieuKien/BaiTap/Luyen_Tap_Cau_Truc_DK2/Bai12.html
+++ b/B3_CauTrucDieuKien/BaiTap/Luyen_Tap_Cau_Truc_DK2/Bai12.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <script>
-    //Số tiền lãi = Số tiền gửi x lãi suất (%/năm) x số ngày thực gửi/360
-    let tienbandau = parseInt(window.prompt('Nhập số tiền gửi: '));
-    let thang = parseInt(window.prompt('Nhập số thang gửi: '));
+    let tienbandau = parseInt(prompt('Nhập số tiền gửi: '));
+    let thang = parseInt(prompt('Nhập số thang gửi: '));
     let laisuat = parseFloat(window.prompt('Nhập lãi suất tháng: '));
     console.log(tienbandau);
     console.log(thang);
