Cau Truc Dieu Kien

--- a/B3_CauTrucDieuKien/BaiTap/CauLenh_Switch_Case/Tinh_Ngay.html
+++ b/B3_CauTrucDieuKien/BaiTap/CauLenh_Switch_Case/Tinh_Ngay.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<body>
 <label> Nhap vao so thang: <input type="number" id="sothang" placeholder="tu 1 den 12"></label>
 <button type="button" onclick="songay()"> Tinh so ngay </button>
 <br>
