--- a/B3_CauTrucDieuKien/BaiTap/Do_You_Love_Me/Not_Love.html
+++ b/B3_CauTrucDieuKien/BaiTap/Do_You_Love_Me/Not_Love.html
@@ -8,7 +8,7 @@
 <body>
 <h1> Do you love me? </h1>
 <button type="button"  onclick=alert("LOVE<3")> YES </button>
-<button type="button"  onmouseover="sayno()" id="not" style="position:absolute; left: 0 ; top: 0;"> NO </button>
+<button type="button"  onmouseover="sayno()" id="not" style="position:absolute"> NO </button>
 <script>
     function sayno() {
         let x = Math.round(Math.random() * window.innerHeight) * 0.3;
