--- a/B3_CauTrucDieuKien/BaiTap/Luyen_Tap_Cau_Truc_DK1/Bai2.html
+++ b/B3_CauTrucDieuKien/BaiTap/Luyen_Tap_Cau_Truc_DK1/Bai2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <script>
-    let age = parseInt(window.prompt('Hoc sinh bao nhieu tuoi? '));
+    let age = parseInt(prompt('Hoc sinh bao nhieu tuoi? '));
     if ( age >= 15){
         alert('Hoc sinh du tuoi hoc lop 10');
     } else {
