--- a/Module1/Module1_UDQL_KhuNghiDuong/YeuCau2/Yeu_Cau_2.html
+++ b/Module1/Module1_UDQL_KhuNghiDuong/YeuCau2/Yeu_Cau_2.html
@@ -10,12 +10,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-
     <style>
          th, td {
             border: 1px solid black;
@@ -46,8 +40,8 @@
             NAME
         </td>
         <td align="left" >
-            <label type="text" id="name" value=" " style="display: inline"> </label>
-            <input  type="text" id="ipName" value=" " style="display: none">
+            <label type="text" id="name"  style="display: inline"> </label>
+            <input  type="text" id="ipName"  style="display: none">
         </td>
         <td align="left" class="title">
             <p>
@@ -55,7 +49,7 @@
             </p>
         </td>
         <td>
-            <select id="customer" value=" " disabled>
+            <select id="customer" disabled>
                 <option value="15"> Diamond </option>
                 <option value="10"> Platinum </option>
                 <option value="5"> Gold </option>
@@ -69,8 +63,8 @@
             </p>
         </td>
         <td>
-            <label type="number" id="sale" value=" " style="display: inline"></label>
-            <input type="number" id="ipSale" value=" " style="display: none">
+            <label type="number" id="sale" style="display: inline"></label>
+            <input type="number" id="ipSale"  style="display: none">
         </td>
     </tr>
     <tr>
@@ -78,15 +72,15 @@
             ID
         </td>
         <td>
-            <label type="number" id="id" value=" " style="display: inline"></label>
-            <input type="number" id="ipID" value=" " style="display: none">
+            <label type="number" id="id"  style="display: inline"></label>
+            <input type="number" id="ipID"  style="display: none">
         </td>
         <td align="left" class="title">
             QUANTITY
         </td>
         <td>
-            <label type="number" id="quantity" value=" " style="display: inline"></label>
-            <input type="number" id="ipQuantity" value=" " style="display: none" >
+            <label type="number" id="quantity" style="display: inline"></label>
+            <input type="number" id="ipQuantity"  style="display: none" >
         </td>
         <td></td>
         <td></td>
@@ -96,15 +90,15 @@
             EMAIL
         </td>
         <td>
-            <label type="email" id="email" value=" " style="display: inline"></label>
-            <input type="email" id="ipEmail" value=" " style="display: none">
+            <label type="email" id="email"  style="display: inline"></label>
+            <input type="email" id="ipEmail"  style="display: none">
         </td>
         <td align="left" class="title">
             RENTDAYS
         </td>
         <td>
-            <label type="rentday" id="rentdays" value=" " style="display: inline"></label>
-            <input type="rentday" id="ipRentdays" value=" " style="display: none">
+            <label type="rentday" id="rentdays"  style="display: inline"></label>
+            <input type="rentday" id="ipRentdays" style="display: none">
         </td>
         <td></td>
         <td></td>
@@ -114,14 +108,14 @@
             ADDRESS
         </td>
         <td>
-            <label type="text" id="address" value=" " style="display: inline"></label>
-            <input type="text" id="ipAddress" value=" " style="display: none">
+            <label type="text" id="address"  style="display: inline"></label>
+            <input type="text" id="ipAddress"  style="display: none">
         </td>
         <td align="left" class="title">
             SERVICE
         </td>
         <td>
-            <select id="service" value=" " disabled>
+            <select id="service"  disabled>
                 <option value="500"> Villa</option>
                 <option value="300"> House</option>
                 <option value="100">Room</option>
@@ -135,8 +129,8 @@
             BIRTHDAY
         </td>
         <td>
-            <label type="date" id="birthday" value=" " style="display: inline"></label>
-            <input type="date" id="ipBirthday" value=" " style="display: none">
+            <label type="text" id="birthday" value=" " style="display: inline"></label>
+            <input type="text" id="ipBirthday" value=" " style="display: none">
         </td>
         <td align="left" class="title">
             ROOM FOR RENT
