--- a/Module1/B4_CauTrucLap/BaiTap/So_Nguyen_To/So_Nguyen_To.html
+++ b/Module1/B4_CauTrucLap/BaiTap/So_Nguyen_To/So_Nguyen_To.html
@@ -9,12 +9,12 @@
     let number = parseInt(prompt('Enter your number: '));
     let countFor = 0;
     let countIf = 0 ;
-    if (number <= 0) {
+    if (number <= 1) {
         alert('Khong ton tai bat ky so nguyen to nao !!!');
     } else {
         let n=2;
         while (countFor<number) {
-            for ( let i=2 ; i <= n/2; i++){
+            for ( let i=2 ; i <= Math.sqrt(n); i++){
                 if ( n % i === 0 ) {
                     countIf += 1;
                     break;
